# yab

./: .gitattributes  .gitignore  Makefile  Makefile.am  README.header  README.md  configure.ac  fix-whitespace  lirc_options.conf  rpmdev-patchbuild  rpmdev-patchbuild.1
configs/: accent.conf  act200l.conf  act220l.conf  adaptec.conf  alsa_usb.conf  animax.conf  asusdh.conf  atilibusb.conf  atwf83.conf  audio.conf  audio_alsa.conf  avermedia.conf  avermedia98.conf  avermedia_vdomate.conf  awlibusb.conf  bestbuy.conf  bestbuy2.conf  breakoutbox.conf  bte.conf  bw6130.conf  caraca.conf  chronos.conf  commandir.conf  cph03x.conf  creative.conf  creative_infracd.conf  devinput.conf  dfclibusb.conf  dsp.conf  dvico.conf  ea65.conf  exaudio.conf  flyvideo.conf  ftdi.conf  gvbctv5pci.conf  hauppauge.conf  hauppauge_dvb.conf  hercules_smarttv_stereo.conf  i2cuser.conf  iguanaIR.conf  (+56 more)
contrib/: lircmd.service
daemons/: Makefile.am  config_file.c  config_file.h  hw_atilibusb.c  hw_audio.c  hw_srm7500libusb.c  irrecord.c  lircd.c  lircd.h  lircmd.c  receive.c  slinke.c
doc/: Makefile.am  release-html.sh  release-man.sh  table.sh
doc/man/: Makefile.am
doc/man-source/: lircd.inc
drivers/: Makefile.am
lib/: Makefile.am  config_file.c  dump_config.c  hardware.h  hw-types.c  hw-types.h  input_map.c  ir_remote.c  ir_remote_types.h  lirc.h  lirc_log.c  lirc_options.c  lircd.c  lircd_base.c  lircd_base.h  receive.c  release.c  serial.c  transmit.c
lib/lirc/: input_map.inc  ir_remote.h  lirc_base.h  lirc_options.h  lircd_base.h
plugins/: Makefile.am  README.plugins  hw_accent.c  hw_accent.h  hw_alsa_usb.c  hw_atilibusb.c  hw_atwf83.c  hw_audio.c  hw_audio_alsa.c  hw_awlibusb.c  hw_bte.c  hw_bte.h  hw_caraca.c  hw_caraca.h  hw_commandir.c  hw_creative.c  hw_creative.h  hw_creative_infracd.c  hw_default.c  hw_default.h  hw_devinput.c  hw_dfclibusb.c  hw_dsp.c  hw_ea65.c  hw_ea65.h  hw_ftdi.c  hw_hiddev.c  hw_i2cuser.c  hw_iguanaIR.c  hw_irlink.c  hw_irlink.h  hw_irman.c  hw_irman.h  hw_livedrive_common.c  hw_livedrive_midi.c  hw_livedrive_seq.c  hw_logitech.c  hw_logitech.h  hw_mouseremote.c  hw_mouseremote.h  (+23 more)
systemd/: Makefile.am
tools/: Makefile.am  irxevent.c  mode2.c  pronto2lirc.py  smode2.c  xmode2.c
