## Process this file with automake to produce Makefile.in
ACLOCAL_AMFLAGS             = -I m4

systemddir                  = /usr/lib/systemd/system
dist_systemd_DATA           = lircd.socket lircd.service lircmd.service

sysconfigdir                = /etc/sysconfig
dist_sysconfig_DATA         = lirc.sysconfig
